--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,5 +4,6 @@
   <h2><%= page.title%></h2>
   <%# <a href='/'> %>
   <%= link_to 'Show Page', page_path(page)%>
+  <%= link_to 'Edit Page', edit_page_path(page) %>
   <%# <a href="/pages/1">Show Page</a> %>
 <% end %>
