--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,5 +5,6 @@
   <%# <a href='/'> %>
   <%= link_to 'Show Page', page_path(page)%>
   <%= link_to 'Edit Page', edit_page_path(page) %>
+  <%= link_to 'Delete Page', page_path(page), method: :delete %>
   <%# <a href="/pages/1">Show Page</a> %>
 <% end %>
